--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "fsj01_project",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
+  "type": "module",
+   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.14.0",
+    "firebase-admin": "^12.6.0",
     "flowbite-react": "^0.10.1",
-    "next": "14.2.10",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18"
   },
