--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-   "scripts": {
+  "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,6 +13,7 @@
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
     "flowbite-react": "^0.10.1",
+    "fuse.js": "^7.0.0",
     "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18"
