--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.10.1",
     "fuse.js": "^7.0.0",
     "next": "^14.2.14",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
